fix: copy on mobile

--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -39,14 +39,15 @@
     background-color: #000;
 }
 
-.marquee span {
+.marquee > span {
     display: inline-block;
     padding-left: 100%;  /* show the marquee just outside the paragraph */
     animation: marquee 10s linear infinite;
 }
 
-.marquee span:hover {
-    animation-play-state: paused;
+.marquee > span.copied {
+    padding-left: 0;
+    animation: none;
 }
 
 /* Make it move */
